# lgrep

./: pyproject.toml  setup.py
ngrep/: config.json  main.py
src/: handler.py  main.py  messages.py  settings.py
test/: test.py  tree-gen.py
test/test-files/: words.txt
